Changes to Footer to fix contrast issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -197,9 +197,10 @@ h3{
     padding: 0.5em 0 0.5em 0;
     color:white;
     margin-top: 1em;
+    font-size: 1.5em;
 }
 
 .footer-content p:first-child{
     font-weight: 600;
-    font-size: 1.5em;
+    font-size: 1em;
 }
